# darknet2ncnn-android

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/cpp/: yolov3-tiny-jni.cpp
app/src/main/cpp/darknet/src/: compare.c
app/src/main/cpp/darknet2ncnn/include/: ncnn_tools.h
app/src/main/cpp/ncnn/include/: layer_type_enum.h
app/src/main/cpp/ncnn/src/: net.cpp
